<resources>
    <string name="app_name">Hello Android</string>
    <string name="your_name">Your name</string>
    <string name="say_hello">Say Hello</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="start_a">Start A</string>
    <string name="start_b">Start B</string>
    <string name="start_c">Start C</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>

    <string-array name="spinner_content">
        <item name="black">Black</item>
        <item name="blue">Blue</item>
        <item name="red">Red</item>
        <item name="green">Green</item>
    </string-array>
</resources>